--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,14 @@ cffi==2.0.0
 charset-normalizer==3.4.4
 colorama==0.4.6
 comm==0.2.3
+contourpy==1.3.3
+cycler==0.12.1
 debugpy==1.8.17
 decorator==5.2.1
 defusedxml==0.7.1
 executing==2.2.1
 fastjsonschema==2.21.2
+fonttools==4.61.1
 fqdn==1.5.1
 gitdb==4.0.12
 GitPython==3.1.45
@@ -31,6 +34,7 @@ ipython_pygments_lexers==1.1.1
 isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.6
+joblib==1.5.3
 json5==0.12.1
 jsonpointer==3.0.0
 jsonschema==4.25.1
@@ -46,8 +50,10 @@ jupyterlab==4.5.0
 jupyterlab_git==0.51.2
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.28.0
+kiwisolver==1.4.9
 lark==1.3.1
 MarkupSafe==3.0.3
+matplotlib==3.10.8
 matplotlib-inline==0.2.1
 mistune==3.1.4
 nbclient==0.10.2
@@ -62,6 +68,7 @@ pandas==3.0.1
 pandocfilters==1.5.1
 parso==0.8.5
 pexpect==4.9.0
+pillow==12.1.1
 platformdirs==4.5.0
 prometheus_client==0.23.1
 prompt_toolkit==3.0.52
@@ -70,6 +77,7 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.23
 Pygments==2.19.2
+pyparsing==3.3.2
 python-dateutil==2.9.0.post0
 python-json-logger==4.0.0
 PyYAML==6.0.3
@@ -80,6 +88,8 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rfc3987-syntax==1.1.0
 rpds-py==0.29.0
+scikit-learn==1.8.0
+scipy==1.17.0
 Send2Trash==1.8.3
 setuptools==80.9.0
 six==1.17.0
@@ -88,6 +98,7 @@ sniffio==1.3.1
 soupsieve==2.8
 stack-data==0.6.3
 terminado==0.18.1
+threadpoolctl==3.6.0
 tinycss2==1.4.0
 tornado==6.5.2
 traitlets==5.14.3
